--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-streamlit
-streamlit-option-menu
-pandas
-seaborn
-matplotlib
+streamlit==1.29.0
+streamlit-option-menu==0.3.6
+pandas==2.1.4
+seaborn==0.13.0
+matplotlib==3.8.2
+numpy==1.26.2
+scikit-learn==1.3.2
+datetime==5.3
+plotly==5.18.0
